# simple-waf-scanner

./: BUG_FIX_SUMMARY.md  Cargo.toml  DATA_EXTRACTION_REPORT.md  HTTP2_CHANGES.md  HTTP2_PRODUCTION.md  HTTP2_QUICKSTART.md  HTTPAPI_SCAN_RESULTS.md  LICENSE-APACHE  LICENSE-MIT  LLM_IMPLEMENTATION_SUMMARY.md  LLM_MODE_IMPROVEMENTS.md  LLM_SECURITY_TESTING.md  OWASP_INTEGRATION.md  PRODUCTION_READY.md  README.md  TESTING.md  api-findings.json  test_detection.sh  test_run.sh
examples/: http2_test.rs  llm_scan_example.rs  owasp_categories.rs  test_detection.rs  test_fingerprints.rs
fingerprints/: waf-signatures.json
payloads/: command-injection.json  http2-adfs-bypass.json  lfi.json  llm01-prompt-injection.json  llm02-sensitive-information-disclosure.json  llm03-supply-chain.json  llm04-data-model-poisoning.json  llm05-improper-output-handling.json  llm06-excessive-agency.json  llm07-system-prompt-leakage.json  llm08-vector-embedding.json  llm09-misinformation.json  llm10-unbounded-consumption.json  microsoft-httpapi-bypass.json  nosql-injection.json  owasp-a01-broken-access-control.json  owasp-a02-security-misconfiguration.json  owasp-a05-injection-advanced.json  owasp-a07-authentication-bypass.json  owasp-a10-error-handling.json  path-traversal.json  rce.json  sqli.json  ssrf.json  ssti.json  xss.json  xxe.json
src/: config.rs  error.rs  evasion.rs  extractor.rs  fingerprints.rs  http.rs  lib.rs  main.rs  payloads.rs  scanner.rs  types.rs
